--- a/htmlpages/index.html
+++ b/htmlpages/index.html
@@ -15,33 +15,15 @@
 <script src="js/jquery-1.12.4.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/angular.min.js"></script>
-<script src="js/controller.js"></script>
+<script src="mainctrl.js"></script>
 <script src="js/angular-route.min.js"></script>
-<script src="js/login.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-cookies.js"></script>
-<!-- Angular wrapper for localStorage and sessionStorage. Defaults to ng-cookies if not available -->
-<script src="http://cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js" type="text/javascript"> </script>
-<!-- Angular wrapper library for JWT-->
-<script src="http://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js" type="text/javascript"> </script>
 
 <body>
 
-<script src="js/angular.min.js"></script>
-<script src="js/controller.js"></script>
-<script src="js/angular-route.min.js"></script>
-<!-- Auth0's lock widget library -->
-<script type="text/javascript" src="https://cdn.auth0.com/js/lock-7.12.min.js"></script>
-<!-- Angular cookie wrapper library for client cookies -->
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-cookies.js"></script>
-<!-- Auth0's Angular SDK Library -->
-<script type="text/javascript" src="https://cdn.auth0.com/w2/auth0-angular-4.js"></script>
-<!-- Angular wrapper for localStorage and sessionStorage. Defaults to ng-cookies if not available -->
-<script src="http://cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js" type="text/javascript"> </script>
-<!-- Angular wrapper library for JWT-->
-<script src="http://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js" type="text/javascript"> </script>
 
 
 
